Fix system indices handling on update operations